--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,1 @@
-<div class="container">
-  {{ title }}
-  <div class="todo list">
-    <div class="input-group">
-      <input class="my input" type="text" placeholder="Todo" #newTask />
-      <button (click)="add(newTask.value)" class="add-button">+</button>
-    </div>
-    <table>
-      <tr *ngFor="let task of tasks" class="even">
-        <td>
-          <pre>
-            {{ task }}
-          </pre>
-        </td>
-        <td>
-          <button (click)="remove(task)" class="remove-button">X</button>
-          <button (click)="markAsDone(task)" class="done-button">Done</button>
-        </td>
-      </tr>
-    </table>
-  </div>
-</div>
+<h1>{{ title }}</h1>
