--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="todo list">
     <div class="input-group">
-      <input class="my input" type="text" placeholder="Todo" #newTask />
+      <input type="text" placeholder="Todo" #newTask />
       <button (click)="add(newTask.value)" class="add-button">+</button>
     </div>
     <table>
