--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>{{ title }}</h1>
+<header>TODO-LIST</header>
+<body>
+  <app-task-list></app-task-list>
+  <app-calendar></app-calendar>
+</body>
